# sersync-plus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.spec  pyproject.toml
docs/: configuration.md  troubleshooting.md
examples/: README.md  apprise.yml  confxml_bidirectional.xml  confxml_minimal.xml
scripts/: build.py  build.sh
sersync/: __init__.py  cli.py
sersync/bidirectional/: __init__.py  conflict_detector.py  conflict_resolver.py  coordinator.py  metadata_manager.py  sync_engine.py  unison_engine.py
sersync/config/: models.py  parser.py
sersync/core/: engine.py  event_queue.py  faillog_executor.py  filter.py  monitor.py  sync_engine.py
sersync/notification/: notifier.py  rules.py
sersync/utils/: daemon.py  logger.py
sersync/web/: __init__.py  auth.py  cache.py  config_manager.py  database.py  standalone.py
sersync/web/routes/: __init__.py  config.py  control.py  logs.py  status.py  sync_history.py
sersync/web/static/: index.html  virtual-scroll.js
